@@ -575,6 +575,23 @@ OUTPUT;
   return $output;
 }
 
+/**
+ * Implement hook_media_browser_plugins
+ * @return unknown_type
+ */
+function media_youtube_media_browser_plugins() {
+  $plugins = array();
+  $path = drupal_get_path('module', 'media_youtube');
+
+  $plugins['media_youtube'] = array(
+    '#attached' => array(
+      'js' => array($path . '/js/media_youtube.fromurl.js'),
+    ),
+  );
+
+  return $plugins;
+}
+
 /** @TODO: Remove below, it's CRUFT **/
 
 /**
